--- a/index.html
+++ b/index.html
@@ -1489,7 +1489,7 @@ padding:10px;
             </a>
           </li>
           <li>
-            <a href="#" data-toggle="modal" data-target="#settings" data-toggle="tooltip" data-placement="top" title="Ctrl+Shift+S">
+            <a href="#" data-toggle="modal" data-target="#settings" data-toggle="tooltip" data-placement="top" title="Ctrl+Alt+S">
               <i class="fa fa-cog"></i>
               <span>Settings</span>
             </a>
@@ -1766,7 +1766,7 @@ padding:10px;
         </button>
       </div>
       <div class="modal-body">
-        <p style="margin-bottom: 50px; margin-left: 130px;">Access settings (Ctrl+Shift+S)</p>
+        <p style="margin-bottom: 50px; margin-left: 130px;">Access settings (Ctrl+Alt+S)</p>
         
         
         <div class="custom-control custom-switch">
