--- a/projectmanager/test2/index.html
+++ b/projectmanager/test2/index.html
@@ -23,7 +23,7 @@
     }
 
 :root {
-      --bg-color: #ffffff;
+      --bg-color: #e0e0e0;
       --text-color: #000000;
       --card-bg: #f8f9fa;
     }
