--- a/projectmanager/test3/index.html
+++ b/projectmanager/test3/index.html
@@ -828,6 +828,9 @@ window.addLink = function (type) {
           <a href="${url}" target="_blank" class="card-link">
             <i class="fas fa-external-link-alt"></i> ${url}
           </a>
+          <a href="${url}" target="_blank" class="btn btn-sm btn-light float-right">
+              <i class="fas fa-link"></i> Open link
+            </a>
           <button class="btn btn-danger btn-sm" onclick="deleteLinkCard(this)">
             <i class="fas fa-trash"></i> Delete
           </button>
