--- a/v2/dash/index.html
+++ b/v2/dash/index.html
@@ -1471,7 +1471,7 @@ padding:10px;
             <div class="sidebar-submenu">
               <ul>
                 <li>
-                  <a href="/cardbetav1/projects2">+ New project</a>
+                  <a href="/sbdemo/v2/projects">+ New project</a>
                 </li>
                
                 
