--- a/v2/dashv4/index.html
+++ b/v2/dashv4/index.html
@@ -4923,7 +4923,32 @@ $(document).ready(function(){
 
       </script>
       
+<script>
+       $(document).ready(function() {
+    let modals = $('.modal');
 
+    modals.on('shown.bs.modal', function() {
+        let activeModal = $(this);
+        let activeZIndex = 1050; //Base bootstrap value.
+
+        // find the highest z-index
+        modals.each(function(){
+            let modalZIndex = parseInt($(this).css('z-index'));
+            if (modalZIndex > activeZIndex){
+                activeZIndex = modalZIndex;
+            }
+        });
+
+        activeModal.css('z-index', activeZIndex + 10); // Bring the active modal to the front.
+
+        //Reorder other modals
+        modals.not(activeModal).each(function(index){
+            $(this).css('z-index', activeZIndex - (modals.not(activeModal).length - index)*5);
+        });
+
+    });
+}); 
+      </script>
 <div id="noCardsPlaceholder2" style="display: none;">
   
   </div>
