--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -1419,7 +1419,7 @@ padding:10px;
     <div class="sidebar-content">
       <div class="sidebar-brand">
        <i class="fa fa-th"></i> 
-        <a href="/cardbetav1/boardv4" style= "color: white; text-transform: lowercase;">stack board</a>
+        <a href="/sbdemo/v2/dashv5" style= "color: white; text-transform: lowercase;">stack board</a>
         
         <div id="close-sidebar">
           <i class="fa fa-times"></i>
