--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -1409,7 +1409,7 @@ padding:10px;
     
     
 <div class="page-wrapper chiller-theme">
-  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#show-sidebar">
+  <a id="show-sidebar" class="btn btn-sm btn-dark">
     <i class="fa fa-chevron-right"></i>
   </a>
   
