--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -3512,7 +3512,7 @@ function loadButtons(modalId) {
       { url: 'https://chat.deepseek.com/', name: 'Chat', size: 'large', openType: 'newWindow' }
     ],
      20: [
-      { url: 'https:facebook.com', name: 'open facebook', size: 'large', openType: 'newWindow' }
+      { url: 'https://facebook.com', name: 'open facebook', size: 'large', openType: 'newWindow' }
     ],
      21: [
       { url: 'https://x.com', name: 'open x', size: 'large', openType: 'newWindow' }
@@ -3527,7 +3527,7 @@ function loadButtons(modalId) {
       { url: 'https://rumble.com', name: 'open rumble', size: 'large', openType: 'newWindow' }
     ],
      25: [
-      { url: 'https://bssky.app', name: 'open bluesky', size: 'large', openType: 'newWindow' }
+      { url: 'https://bsky.app', name: 'open bluesky', size: 'large', openType: 'newWindow' }
     ],
      26: [
       { url: 'https://telegram.org', name: 'open telegram', size: 'large', openType: 'newWindow' }
