--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -3008,7 +3008,7 @@ function loadSections() {
 	   <a class="dropdown-item" href="/sbdemo/v2/add/?sectionId=${section.id}"> <i class="fas fa-plus"></i> Add app </a>
             <a class="dropdown-item" href="#" onclick="openRenameModal('${section.id}', '${section.title}')"><i class="fas fa-edit"></i> Rename </a>
 	   
-            <a class="dropdown-item text-danger" href="#" onclick="removeSection('${section.id}')"><i class="fas fa-trash-alt"></i> Remove </a>
+            <a class="dropdown-item text-danger" href="/sbdemo/v2/dashv5" onclick="removeSection('${section.id}')"><i class="fas fa-trash-alt"></i> Remove </a>
           </div>
         </div>
       </div>
