--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -3572,16 +3572,16 @@ function loadButtons(modalId) {
       { url: 'https://merchantcircle.com', name: 'open MC', size: 'large', openType: 'newWindow' }
     ],
      40: [
-      { url: 'https://paper.li', name: 'open paper.li', size: 'large', openType: 'newWindow' }
+      { url: 'https://truthsocial.com/', name: 'open truth', size: 'large', openType: 'newWindow' }
     ],
      41: [
-      { url: 'https://crunchbase.com', name: 'open crunchbase', size: 'large', openType: 'newWindow' }
+      { url: 'https://paper.li', name: 'open paper.li', size: 'large', openType: 'newWindow' }
     ],
      42: [
-      { url: 'https://hubpages.com', name: 'open hubpages', size: 'large', openType: 'newWindow' }
+      { url: 'https://crunchbase.com', name: 'open crunchbase', size: 'large', openType: 'newWindow' }
     ],
      43: [
-      { url: 'https://claude.ai/', name: 'open Claude', size: 'large', openType: 'newWindow' }
+      { url: 'https://hubpages.com', name: 'open hubpages', size: 'large', openType: 'newWindow' }
     ],
   };
 
