--- a/v2/add/index.html
+++ b/v2/add/index.html
@@ -734,6 +734,18 @@ $(document).on('click', '.filter-button', function () {
       textClass: 'text-primary',
      infoUrl: '',
       modalId: '43',
+    },
+       { id: '44',
+      title: 'GMB',
+      description: 'Google business page',
+      image: 'https://www.innovationvisual.com/hubfs/Imported_Blog_Media/gmg-logo-300x300.png',
+      category: 'business',
+      tag: 'google, business, profile, listing', // data-tag
+      filter: ['Business'], // data-filter
+      borderClass: 'border-primary',
+      textClass: 'text-primary',
+     infoUrl: '',
+      modalId: '44',
     }
     
     
