--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -3583,6 +3583,9 @@ function loadButtons(modalId) {
      43: [
       { url: 'https://hubpages.com', name: 'open hubpages', size: 'large', openType: 'newWindow' }
     ],
+	  44: [
+      { url: 'https://business.google.com', name: 'open GMB', size: 'large', openType: 'newWindow' }
+    ],  
   };
 
   // Get predefined buttons and saved buttons from localStorage
