--- a/v2/add/index.html
+++ b/v2/add/index.html
@@ -746,6 +746,18 @@ $(document).on('click', '.filter-button', function () {
       textClass: 'text-primary',
      infoUrl: '',
       modalId: '44',
+    },
+       { id: '45',
+      title: 'Search console',
+      description: 'Mange your online presence',
+      image: 'https://logowik.com/content/uploads/images/google-search-console4537.logowik.com.webp',
+      category: 'business',
+      tag: 'google, business, profile, listing', // data-tag
+      filter: ['websites'], // data-filter
+      borderClass: 'border-primary',
+      textClass: 'text-primary',
+     infoUrl: '',
+      modalId: '45',
     }
     
     
