--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -3586,6 +3586,9 @@ function loadButtons(modalId) {
 	  44: [
       { url: 'https://business.google.com', name: 'open GMB', size: 'large', openType: 'newWindow' }
     ],  
+	    45: [
+      { url: 'https://search.google.com/search-console/welcome', name: 'open Search console', size: 'large', openType: 'newWindow' }
+    ]
   };
 
   // Get predefined buttons and saved buttons from localStorage
