--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -3588,7 +3588,11 @@ function loadButtons(modalId) {
     ],  
 	    45: [
       { url: 'https://search.google.com/search-console/welcome', name: 'open Search console', size: 'large', openType: 'newWindow' }
-    ]
+    ],
+	     46: [
+      { url: 'https://www.cloudflare.com/', name: 'open cloudflare', size: 'large', openType: 'newWindow' },
+{ url: 'https://dash.cloudflare.com/', name: 'open dashboard', size: 'large', openType: 'newWindow' }
+    ] 
   };
 
   // Get predefined buttons and saved buttons from localStorage
