--- a/v2/add/index.html
+++ b/v2/add/index.html
@@ -758,6 +758,18 @@ $(document).on('click', '.filter-button', function () {
       textClass: 'text-primary',
      infoUrl: '',
       modalId: '45',
+    },
+       { id: '46',
+      title: 'Cloudflare',
+      description: 'Security and performance for your website',
+      image: 'https://images.seeklogo.com/logo-png/29/2/cloudflare-logo-png_seeklogo-294312.png',
+      category: 'business',
+      tag: 'google, business, profile, listing', // data-tag
+      filter: ['websites'], // data-filter
+      borderClass: 'border-primary',
+      textClass: 'text-primary',
+     infoUrl: '',
+      modalId: '46',
     }
     
     
