--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -2029,7 +2029,7 @@ padding:10px;
           <!-- Add Section Form -->
     <div class="my-4">
       <input type="text" id="sectionTitle" class="form-control" placeholder="Name your stack (eg. Social)" required>
-      <a  id="addSectionBtn" href="/sbdemo/v2/add/" class="btn btn-success mt-2" data-dismiss="modal" >Create</a>
+      <a href="/sbdemo/v2/add/" id="addSectionBtn" class="btn btn-success mt-2" >Create</a>
     </div>
  
         </div>
