--- a/v2/add/index.html
+++ b/v2/add/index.html
@@ -770,6 +770,30 @@ $(document).on('click', '.filter-button', function () {
       textClass: 'text-primary',
      infoUrl: '',
       modalId: '46',
+    },
+       { id: '47',
+      title: 'node.js',
+      description: 'Run javascript everywhere!',
+      image: 'https://pluralsight2.imgix.net/paths/images/nodejs-45adbe594d.png',
+      category: 'business',
+      tag: 'google, business, profile, listing', // data-tag
+      filter: ['websites'], // data-filter
+      borderClass: 'border-primary',
+      textClass: 'text-primary',
+     infoUrl: '',
+      modalId: '47',
+    },
+       { id: '48',
+      title: 'react',
+      description: 'javascript library',
+      image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcR5U16C8yXgBpl7-Bc7Itjx3_LRl425zINA&s',
+      category: 'business',
+      tag: 'google, business, profile, listing', // data-tag
+      filter: ['websites'], // data-filter
+      borderClass: 'border-primary',
+      textClass: 'text-primary',
+     infoUrl: '',
+      modalId: '48',
     }
     
     
