--- a/v2/add/index.html
+++ b/v2/add/index.html
@@ -774,7 +774,7 @@ $(document).on('click', '.filter-button', function () {
        { id: '47',
       title: 'node.js',
       description: 'Run javascript everywhere!',
-      image: 'https://pluralsight2.imgix.net/paths/images/nodejs-45adbe594d.png',
+      image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-bSt16XVIR9526s9Rs6OUTds5FV8oZ_vX1w&s',
       category: 'business',
       tag: 'google, business, profile, listing', // data-tag
       filter: ['websites'], // data-filter
