--- a/v2/add/index.html
+++ b/v2/add/index.html
@@ -269,7 +269,7 @@ $(document).on('click', '.filter-button', function () {
     { id: '4',
       title: 'Stack editor',
       description: 'Simple front end editor',
-      image: 'https://discourse-user-assets.s3.amazonaws.com/original/2X/d/df30640741461569071875cf4ff6cad9924f8b32.png',
+      image: 'https://i.pinimg.com/474x/4c/3b/c9/4c3bc92b496b978cb024ae3505a541f6.jpg',
       category: 'development',
       tag: 'code, editor, html,css, javascript,python', // data-tag
       filter: 'development', // data-filter
