--- a/v2/dashv5/index.html
+++ b/v2/dashv5/index.html
@@ -2425,7 +2425,7 @@ padding:10px;
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" id="saveRenameBtn"  data-dismiss="modal">Save</button>
+        <a href="/sbdemo/v2/dashv5/" type="button" class="btn btn-primary" id="saveRenameBtn"  data-dismiss="modal">Save</a>
       </div>
     </div>
   </div>
