--- a/v2/dashv5/newsdemo/index.html
+++ b/v2/dashv5/newsdemo/index.html
@@ -1936,6 +1936,16 @@ padding:10px;
       <div class="modal-body">
         <div class="container mt-4">
         <h2 class="text-center mb-4">Latest News</h2>
+          <div class="float-right">
+          <button type="button" class="btn btn-outline-secondary" data-dismiss="modal" style="margin-bottom: 5px;"><i class="fa-solid fa-bookmark" ></i> Saves</button>
+            
+            <br>
+       <button type="button" class="btn btn-outline-secondary" data-dismiss="modal" style="margin-bottom: 5px;"><i class="fa-solid fa-rss"></i> feeds</button>  
+             <br>
+       <button type="button" class="btn btn-secondary" data-dismiss="modal" style="margin-bottom: 5px;"><i class="fas fa-plus"></i> </button> 
+            <br>
+            <a href="#">Settings</a>
+          </div>
         <div class="row" id="rss-feed">
             <p class="mx-auto">Loading news...</p>
         </div>
