--- a/v2/dashv5/cryptodemo/index.html
+++ b/v2/dashv5/cryptodemo/index.html
@@ -1718,7 +1718,7 @@ embedder.parentNode.appendChild(s);
     <div class="dropdown-menu">
       <a class="dropdown-item" href="#"><i class="far fa-credit-card"></i> Buy</a>
       <a class="dropdown-item" href="#"><i class="fas fa-money-bill"></i> Sell</a>
-      <a class="dropdown-item" href="#"><i class="fas fa-magic"></i> Ai recommend</a>
+      <a class="dropdown-item" href="#"><i class="fas fa-magic"></i> stackAi suggest</a>
     </div>
   </div>
         
