--- a/v2/dashv5/connectiondemo/index.html
+++ b/v2/dashv5/connectiondemo/index.html
@@ -2185,7 +2185,7 @@ padding:10px;
               <i class="fas fa-reply"></i> Reply
             </button>
     
-   Agent auto replies
+   stackAi auto replies
     <input type="checkbox" id="switch1">
     <label for="switch1">Toggle</label>
 </div> 
