--- a/v2/dashv5/fbdemo/index.html
+++ b/v2/dashv5/fbdemo/index.html
@@ -2399,7 +2399,7 @@ height:950px;
       
         <!-- Modal Header -->
         <div class="modal-header">
-          <h4 class="modal-title"><i class="fas fa-th"></i> stackbot</h4>
+          <h3 class="modal-title"><i class="fas fa-th"></i> stackAi</h3>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         
