--- a/v2/dashv5/aidemo/index.html
+++ b/v2/dashv5/aidemo/index.html
@@ -428,7 +428,7 @@
                         <div class="card no-border">
                             <div id="chat" class="conv-form-wrapper">
                                 <form action="" method="GET" class="hidden">
-                                    <select name="programmer" data-callback="storeState"  data-conv-question="Good day! would you like to create a facebook post about your recent projects?
+                                    <select name="programmer" data-callback="storeState"  data-conv-question="Good day! Would you like to create a facebook post about your recent projects?
                                                                                                               <br>
                                                                                                               <br>
                                                                                                               <br>
