--- a/v2/dashv5/fbdemo/index.html
+++ b/v2/dashv5/fbdemo/index.html
@@ -2376,7 +2376,7 @@ height:950px;
           <p>It's been a while since you last posted to facebook. According to your audience, the optimal time for posting new content is approaching.
           <br>
           <br>
-          Would you like to take of this now, or add it as a task for later?</p>
+          Would you like to take care of this now, or add it as a task for later?</p>
           
           <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#fb"> Do it now</button>
             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#fb">
