--- a/v2/dashv5/pmdemo/index.html
+++ b/v2/dashv5/pmdemo/index.html
@@ -1700,7 +1700,7 @@ padding:10px;
     
   <!-- Add Project Button -->
     <div class="mb-4 text-right">
-      <button class="btn btn-primary" id="addProjectBtn">Add Project</button>
+      <button class="btn btn-success" id="addProjectBtn">Add Project</button>
     </div>
 
     <!-- Project Cards Row -->
@@ -1708,6 +1708,10 @@ padding:10px;
       <!-- Dynamic project cards will be inserted here -->
     </div>
   </div>
+		  <br>
+		  <br><br>
+		  <br>
+		  <br><br>
           <!-- Add/Edit Project Modal -->
   <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel" aria-hidden="true">
     <div class="modal-dialog">
