--- a/v2/dashv5/pmdemo/index.html
+++ b/v2/dashv5/pmdemo/index.html
@@ -23,7 +23,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     <style>
 
     .progress-bar {
-      background-color: #007bff;
+      background-color: #83fd7d;
     }
 
     .badge {
